--- a/components/navbar/NavBar.module.scss
+++ b/components/navbar/NavBar.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     padding: 20px;
-    justify-content: space-between;
+    justify-content: flex-end;
 
     .search {
       display: flex;
