--- a/components/eventForm/eventForm.module.scss
+++ b/components/eventForm/eventForm.module.scss
@@ -3,7 +3,11 @@
 
 .dragAndDropWrapper {
   width: 200px;
-  margin: auto;
+  height: 100%;
+
+  :nth-child(1) {
+    height: 100%;
+  }
 }
 
 .modalForm {
